--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <h2>Chúng tôi thành thật xin lỗi!</h2>
             <p>Vui lòng cho Owen biết cụ thể vấn đề bạn gặp phải để chúng tôi có thể cải thiện dịch vụ tốt hơn. Mọi phản hồi của bạn đều được bảo mật.</p>
             <form id="feedback-form">
-                <textarea name="feedback_issue" placeholder="Điều gì làm bạn chưa hài lòng?" required></textarea>
-                <textarea name="feedback_suggestion" placeholder="Owen có thể làm gì để tốt hơn?"></textarea>
-                <input type="text" name="contact_info" placeholder="Số điện thoại/Email (Không bắt buộc)">
+                <textarea name="entry.1911161399" placeholder="Điều gì làm bạn chưa hài lòng?" required></textarea>
+                <textarea name="entry.1630079770" placeholder="Owen có thể làm gì để tốt hơn?"></textarea>
+                <input type="text" name="entry.1780081750" placeholder="Số điện thoại/Email (Không bắt buộc)">
                 <button type="submit">Gửi phản hồi</button>
             </form>
         </div>
